Overhaul config, add base styles, refactor AccordionGroup

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/main.scss" />
+    <script type="module" src="/src/main.ts" defer></script>
     <title>Vite App</title>
   </head>
   <body>
@@ -11,6 +13,5 @@
     <hr />
     <div id="tilly-accordion-2"></div>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
