Finish initial refactor

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="tilly-accordion"></div>
     <hr />
     <div id="tilly-accordion-2"></div>
-    <div id="app"></div>
+    <hr />
+    <div id="tilly-accordion-3"></div>
   </body>
 </html>
